tests/models/struct/unnamed/i128/fail/alias.rs
use dade::model;
#[model]
struct TestModel (
   #[field(alias = "val")]
    i128
);
fn main() {}
